<resources>
    <string name="fb_login_protocol_scheme">fblogin</string>

    <string name="app_name">다리</string>
    <string name="action_settings">Settings</string>

    <string name="txt_ok">확인</string>
    <string name="txt_cancel">취소</string>

    <string name="facebook_app_id">745752162261014</string>
    <string name="hint_input_email">이메일을 입력하세요</string>
    <string name="hint_input_pwd">패스워드를 입력하세요</string>

    <string name="sign_in_with_email">이메일로 시작하기</string>
    <string name="sign_in_with_facebook">페이스북으로 시작하기</string>
    <string name="sign_in_with_google">구글로 시작하기</string>
    <string name="open_drawer">사이드메뉴 열기</string>
    <string name="close_drawer">사이드메뉴 닫기</string>
    <string name="action_delete">삭제</string>
    <string name="title_activity_maps">위치 선택</string>

    <string name="btn_modify_profile">회원정보 수정</string>
    <string name="btn_withdrawal">회원탈퇴</string>

    <string name="msg_error_showing_post">오류가 발생하였습니다. 다시 시도해주세요.</string>
    <string name="error_invalid_due_date">잘못된 약속 날짜입니다. 오늘 날짜보다 큰 날짜를 선택해주세요.</string>
    <string name="error_input_text">메세지를 입력하여 주세요.</string>
    <string name="error_failed_modify_user_info">유저 정보를 업데이트를 실패하였습니다.</string>
    <string name="error_withdrawal_service">서비스 탈퇴를 실패하였습니다.</string>
    <string name="error_not_exist_user_info">유저 정보가 존재하지 않습니다.</string>
    <string name="error_address_name_empty">정확한 장소명을 입력해주세요.</string>
    <string name="error_select_place">장소 선택이 취소되었습니다.</string>

    <string name="msg_guide_move_sign_up">해당 유저는 혼술남녀에 가입되어 있지 않습니다. 가입 화면으로 이동하시겠습니까?</string>
    <string name="hint_input_title">제목을 입력해주세요.</string>
    <string name="hint_input_desc">내용을 입력해주세요.</string>
    <string name="title_due_date">약속 날짜</string>
    <string name="title_location">만날 장소</string>
    <string name="success_modify_post">글 수정을 성공하였습니다.</string>
    <string name="failure_modify_post">글 수정을 실패하였습니다.</string>
    <string name="title_modify_post">글 수정</string>
    <string name="title_profile">프로필</string>
    <string name="action_modify">수정</string>
    <string name="msg_withdrawal_service">서비스를 탈퇴하였습니다.</string>
    <string name="msg_success_modify_user_info">유저 정보를 업데이트하였습니다.</string>
    <string name="msg_logout">로그아웃 되었습니다. 다시 로그인해주세요.</string>
    <string name="title_alert">알림</string>
    <string name="button_ok">확인</string>
    <string name="msg_exist_modify_user_info">현재 유저 정보 수정사항이 존재합니다. 수정하시겠습니까?</string>
    <string name="button_cancel">취소</string>
    <string name="title_select_image">이미지 선택</string>
    <string name="title_optional">부가항목</string>
    <string name="sub_title_gender">성별</string>
    <string name="txt_mail">남자</string>
    <string name="txt_femail">여자</string>
    <string name="hint_input_nickname">닉네임을 입력하세요</string>
    <string name="title_critical">필수항목</string>
    <string name="subtitle_due_date">약속 날짜</string>
    <string name="subtitle_location">만날 장소</string>
    <string name="subtitle_picture">사진</string>
    <string name="button_picture_upload">사진 업로드</string>
    <string name="button_create_post">모임 만들기</string>
    <string name="title_chat">채팅</string>
    <string name="subtitle_hash_tag">해쉬태그</string>

    <string name="button_logout">logout</string>
    <string name="msg_success_delete_post">글을 삭제하였습니다.</string>
    <string name="msg_delete_post_failed">글 삭제를 실패하였습니다.</string>
    <string name="msg_success_join_group">그룹 가입에 성공하였습니다.</string>
    <string name="msg_success_exit_group">그룹 탈퇴에 성공하였습니다.</string>
    <string name="msg_success_create_chat_room">채팅방 만들기를 성공하였습니다.</string>
    <string name="msg_failed_create_chat_room">채팅방 만들기를 실패하였습니다.</string>
    <string name="msg_exit_group">그룹을 탈퇴하시겠습니까?</string>
    <string name="msg_delete_post">해당 글을 삭제하겠습니까?</string>
    <string name="msg_progress_upload_image">프로필 이미지를 업로드중입니다.</string>
    <string name="msg_progress_update_user_info">유저 정보를 업데이트 중입니다.</string>

    <string name="msg_upload_image">이미지 업로드</string>
    <string name="msg_upload_image_complete">이미지 업로드를 완료하였습니다.</string>
    <string name="msg_search_address">장소 검색</string>
    <string name="title_input_address_name">위치 설명 입력</string>
    <string name="hint_input_address_name">만날 장소명을 입력해주세요.</string>
    <string name="msg_input_address_name">정확한 위치명을 입력해주세요.</string>
    <string name="error_failed_upload_image">이미지 업로드를 실패하였습니다.</string>
    <string name="success_image_upload">이미지 업로드를 성공하였습니다.</string>

    <string name="error_send_chat">메세지 전송을 실패하였습니다.\n원인[%s]</string>
    <string name="error_upload_image">이미지 업로드를 실패했습니다. 원인[%s]</string>
    <string name="button_join_this_group">그룹 가입</string>
    <string name="button_withdrawal_this_group">그룹 탈퇴</string>
    <string name="title_desc">설명</string>
    <string name="title_appointment_date">약속 날짜</string>
    <string name="title_place">위치</string>

    <string name="button_join_chat">채팅방 참여</string>
    <string name="button_create_chat">채팅방 생성</string>
    <string name="hint_input_hash_tag">해쉬 태그를 입력하세요</string>
    <string name="btn_input">입력</string>
    <string name="failure_image_delete">이미지 삭제를 실패하였습니다.</string>
    <string name="success_image_delete">이미지 삭제를 성공하였습니다.</string>
    <string name="error_hash_tag_empty">해쉬 태그를 입력해주세요.</string>
    <string name="success_write_post">글쓰기를 완료하였습니다.</string>
    <string name="subtitle_category">카테고리</string>
    <string name="title_group_image">모임 이미지</string>
    <string name="error_load_image">이미지를 읽어올 수 없습니다.</string>
</resources>
