<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.obppamanse.honsulnamnye.user.SignInViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/et_input_email"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/et_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_input_password"
                android:hint="@string/hint_input_email"
                android:inputType="textEmailAddress"
                android:onTextChanged="@{(c,start,before,count) -> viewModel.inputEmail(c)}" />

            <EditText
                android:id="@+id/et_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:hint="@string/hint_input_pwd"
                android:inputType="textPassword"
                android:onTextChanged="@{(c,start,before,count) -> viewModel.inputPassword(c)}"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_sing_in_with_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewModel.clickLoginWithEmail()}"
            android:text="@string/sign_in_with_email" />

        <Button
            android:id="@+id/btn_sign_in_with_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewModel.clickLoginWithFacebook()}"
            android:text="@string/sign_in_with_facebook" />

        <Button
            android:id="@+id/btn_sign_in_with_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewModel.clickLoginWithGoogle()}"
            android:text="@string/sign_in_with_google" />

    </LinearLayout>
</layout>

