<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.obppamanse.honsulnamnye.post.write.PostWriteViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_write_post">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="40dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/default_margin">

                        <EditText
                            android:id="@+id/et_input_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/default_margin"
                            android:hint="@string/hint_input_title"
                            android:onTextChanged="@{(title,a,b,c) -> viewModel.updateTitle(title)}" />

                        <EditText
                            android:id="@+id/et_input_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:hint="@string/hint_input_desc"
                            android:maxLines="10"
                            android:onTextChanged="@{(desc,a,b,c) -> viewModel.updateDesc(desc)}" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/default_margin">

                        <TextView
                            android:id="@+id/tv_title_tag"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/default_margin"
                            android:text="@string/subtitle_hash_tag" />

                        <EditText
                            android:id="@+id/et_input_hash_tag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_title_tag"
                            android:hint="@string/hint_input_hash_tag"
                            android:layout_toLeftOf="@+id/btn_add_hash_tag"
                            android:layout_marginRight="@dimen/default_margin"
                            android:text="@={viewModel.hashTag}"/>

                        <Button
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/tv_title_tag"
                            android:id="@+id/btn_add_hash_tag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_input"
                            android:onClick="@{view -> viewModel.clickAddHashTag()}"/>

                        <android.support.v7.widget.RecyclerView
                            android:padding="5dp"
                            android:id="@+id/list_hash_tags"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/btn_add_hash_tag"
                            app:setHashTagList="@{viewModel.hashTagList}"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:onClick="@{(view) -> viewModel.clickDueDate(context)}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/default_margin">

                        <TextView
                            android:id="@+id/tv_title_due_date"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/default_margin"
                            android:text="@string/subtitle_due_date" />

                        <TextView
                            android:id="@+id/tv_due_date"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.dueDateTxt}" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:onClick="@{(view) -> viewModel.clickSelectLocation()}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/default_margin">

                        <TextView
                            android:id="@+id/tv_title_location"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/default_margin"
                            android:text="@string/subtitle_location" />

                        <TextView
                            android:id="@+id/tv_location"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.placeName}" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/default_margin">

                        <TextView
                            android:id="@+id/tv_title_upload_image"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/default_margin"
                            android:text="@string/subtitle_picture" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/pager_upload_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/default_margin"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:visibility="@{viewModel.uploadImageUri.isEmpty() ? View.GONE : View.VISIBLE}"
                            app:setUploadImageList="@{viewModel.uploadImageUri}" />

                        <Button
                            android:id="@+id/btn_upload_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{(view) -> viewModel.clickUploadFile()}"
                            android:text="@string/button_picture_upload" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_write_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="@{view -> viewModel.clickWritePost(context)}"
            android:text="@string/button_create_post" />

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/loading_progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </android.support.design.widget.CoordinatorLayout>

</layout>